force-app/main/default/objects/OpportunityLineItem/fields/Administrasi_F__c.field-meta.xml
<CustomField>
    <fullName>Administrasi_F__c</fullName>
    <formula>Biaya_Admin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Administrasi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>