force-app/main/default/objects/OpportunityLineItem/fields/Alamat_Asset_yang_di_jaminkan__c.field-meta.xml
<CustomField>
    <fullName>Alamat_Asset_yang_di_jaminkan__c</fullName>
    <formula>Opportunity.Asset_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alamat Asset yang di jaminkan</label>
    <type>Text</type>
</CustomField>