force-app/main/default/objects/OpportunityLineItem/fields/Asuransi_Jiwa__c.field-meta.xml
<CustomField>
    <fullName>Asuransi_Jiwa__c</fullName>
    <label>Asuransi Jiwa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>