force-app/main/default/objects/OpportunityLineItem/fields/Asuransi_Kebakaran__c.field-meta.xml
<CustomField>
    <fullName>Asuransi_Kebakaran__c</fullName>
    <label>Asuransi Kebakaran</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>