force-app/main/default/objects/OpportunityLineItem/fields/Jaminan_Sertifikat__c.field-meta.xml
<CustomField>
    <fullName>Jaminan_Sertifikat__c</fullName>
    <formula>TEXT(Jenis_Asset__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jaminan Sertifikat</label>
    <type>Text</type>
</CustomField>