force-app/main/default/objects/OpportunityLineItem/fields/Jenis_Asset__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Asset__c</fullName>
    <defaultValue>&quot;Rumah&quot;</defaultValue>
    <label>Jenis Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rumah</fullName>
            </value>
            <value>
                <fullName>Ruko/Rukan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>