force-app/main/default/objects/OpportunityLineItem/fields/Jenis_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Sertipikat__c</fullName>
    <label>Jenis Sertipikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>