force-app/main/default/objects/OpportunityLineItem/fields/Kepemilikan_Asset__c.field-meta.xml
<CustomField>
    <fullName>Kepemilikan_Asset__c</fullName>
    <defaultValue>&quot;Sendiri/Pasangan&quot;</defaultValue>
    <label>Kepemilikan Asset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sendiri/Pasangan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>