force-app/main/default/objects/OpportunityLineItem/fields/lintas_last_updated__c.field-meta.xml
<CustomField>
    <fullName>lintas_last_updated__c</fullName>
    <label>lintas last updated</label>
    <type>DateTime</type>
</CustomField>