force-app/main/default/objects/OpportunityLineItem/fields/Nama_Pemohon__c.field-meta.xml
<CustomField>
    <fullName>Nama_Pemohon__c</fullName>
    <formula>Opportunity.Primary_Contact__r.FirstName &amp; &quot; &quot; &amp;  Opportunity.Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nama Pemohon</label>
    <type>Text</type>
</CustomField>