force-app/main/default/objects/OpportunityLineItem/fields/Nama_Pemohon_Non_Formula__c.field-meta.xml
<CustomField>
    <fullName>Nama_Pemohon_Non_Formula__c</fullName>
    <label>Nama Pemohon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>