force-app/main/default/objects/OpportunityLineItem/fields/Nama_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Nama_Sertipikat__c</fullName>
    <label>Nama Sertipikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>