force-app/main/default/objects/OpportunityLineItem/fields/Paket_Pembiayaan__c.field-meta.xml
<CustomField>
    <fullName>Paket_Pembiayaan__c</fullName>
    <formula>TEXT(Opportunity.Tipe_Penilaian__c)</formula>
    <label>Paket Pembiayaan</label>
    <type>Text</type>
</CustomField>