force-app/main/default/objects/OpportunityLineItem/fields/Paket_Pembiayaan_Non_Formula__c.field-meta.xml
<CustomField>
    <fullName>Paket_Pembiayaan_Non_Formula__c</fullName>
    <label>Paket Pembiayaan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>