force-app/main/default/objects/OpportunityLineItem/fields/Perkiraan_Harga_Rumah__c.field-meta.xml
<CustomField>
    <fullName>Perkiraan_Harga_Rumah__c</fullName>
    <label>Perkiraan Harga Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>