force-app/main/default/objects/OpportunityLineItem/fields/Total_Pencairan_Ke_Pemohon__c.field-meta.xml
<CustomField>
    <fullName>Total_Pencairan_Ke_Pemohon__c</fullName>
    <label>Total Pencairan Ke Pemohon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>