force-app/main/default/objects/OpportunityLineItem/fields/Usia_Pemohon__c.field-meta.xml
<CustomField>
    <fullName>Usia_Pemohon__c</fullName>
    <label>Usia Pemohon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>